--- a/templates/nfs-storage/0/rancher-compose.yml
+++ b/templates/nfs-storage/0/rancher-compose.yml
@@ -3,7 +3,6 @@
 	version: "0.1.0" # Version of the versioned template of the Catalog Entry
 	description: |
 		NFS Server based on alpine # Description of the versioned template of the Catalog Entry
-	upgrade_from: # The previous versions that this template can be upgraded from
+	# upgrade_from: # The previous versions that this template can be upgraded from
 	minimum_rancher_version: "1.2.0" # The minimum version of Rancher that supports the template, v1.0.1 and 1.0.1 are acceptable inputs
-	maximum_rancher_version: # The maximum version of Rancher that supports the template, v1.0.1 and 1.0.1 are acceptable inputs
-	questions: #Used to request user input for configuration options
+	# maximum_rancher_version: # The maximum version of Rancher that supports the template, v1.0.1 and 1.0.1 are acceptable inputs
